--- a/index.html
+++ b/index.html
@@ -4,17 +4,48 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <meta name="theme-color" content="#2196F3" />
+    <title>TypeWhisper — Local Speech-to-Text for macOS</title>
     <meta name="description" content="Local speech-to-text for macOS. Transcribe audio using on-device AI models — no cloud, no API keys, no subscriptions." />
+    <link rel="canonical" href="https://www.typewhisper.com/" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.typewhisper.com/" />
     <meta property="og:title" content="TypeWhisper — Local Speech-to-Text for macOS" />
     <meta property="og:description" content="Transcribe audio using on-device AI models — no cloud, no API keys, no subscriptions. Your voice data never leaves your Mac." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://typewhisper.com" />
-    <meta property="og:image" content="https://typewhisper.com/og-image.png" />
+    <meta property="og:image" content="https://www.typewhisper.com/og-image.png" />
+    <meta property="og:site_name" content="TypeWhisper" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Type_Whisper" />
+    <meta name="twitter:title" content="TypeWhisper — Local Speech-to-Text for macOS" />
+    <meta name="twitter:description" content="Transcribe audio using on-device AI models — no cloud, no API keys, no subscriptions. Your voice data never leaves your Mac." />
+    <meta name="twitter:image" content="https://www.typewhisper.com/og-image.png" />
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&family=Plus+Jakarta+Sans:wght@600;700;800&display=swap" rel="stylesheet" />
-    <title>TypeWhisper — Local Speech-to-Text for macOS</title>
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "TypeWhisper",
+      "applicationCategory": "UtilitiesApplication",
+      "operatingSystem": "macOS",
+      "description": "Local speech-to-text for macOS. Transcribe audio using on-device AI models — no cloud, no API keys, no subscriptions.",
+      "url": "https://www.typewhisper.com",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
     <!-- GitHub Pages SPA redirect handler -->
     <script>
       (function(){
