--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="theme-color" content="#2196F3" />
-    <title>TypeWhisper — Local Speech-to-Text for macOS</title>
-    <meta name="description" content="Local speech-to-text for macOS. Transcribe audio using on-device AI models — no cloud, no API keys, no subscriptions." />
+    <title>TypeWhisper - Stop Typing. Start Speaking. 100% Private.</title>
+    <meta name="description" content="Free local speech-to-text for macOS and Windows. On-device AI, no cloud, no API keys, no subscriptions." />
     <link rel="canonical" href="https://www.typewhisper.com/" />
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.typewhisper.com/" />
-    <meta property="og:title" content="TypeWhisper — Local Speech-to-Text for macOS" />
-    <meta property="og:description" content="Transcribe audio using on-device AI models — no cloud, no API keys, no subscriptions. Your voice data never leaves your Mac." />
+    <meta property="og:title" content="TypeWhisper - Stop Typing. Start Speaking. 100% Private." />
+    <meta property="og:description" content="Free local speech-to-text for macOS and Windows. On-device AI, no cloud, no API keys, no subscriptions." />
     <meta property="og:image" content="https://www.typewhisper.com/og-image.png" />
     <meta property="og:site_name" content="TypeWhisper" />
     <meta property="og:locale" content="en_US" />
@@ -22,8 +22,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Type_Whisper" />
-    <meta name="twitter:title" content="TypeWhisper — Local Speech-to-Text for macOS" />
-    <meta name="twitter:description" content="Transcribe audio using on-device AI models — no cloud, no API keys, no subscriptions. Your voice data never leaves your Mac." />
+    <meta name="twitter:title" content="TypeWhisper - Stop Typing. Start Speaking. 100% Private." />
+    <meta name="twitter:description" content="Free local speech-to-text for macOS and Windows. On-device AI, no cloud, no API keys, no subscriptions." />
     <meta name="twitter:image" content="https://www.typewhisper.com/og-image.png" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -36,8 +36,8 @@
       "@type": "SoftwareApplication",
       "name": "TypeWhisper",
       "applicationCategory": "UtilitiesApplication",
-      "operatingSystem": "macOS",
-      "description": "Local speech-to-text for macOS. Transcribe audio using on-device AI models — no cloud, no API keys, no subscriptions.",
+      "operatingSystem": "macOS, Windows",
+      "description": "Free local speech-to-text for macOS and Windows. On-device AI, no cloud, no API keys, no subscriptions.",
       "url": "https://www.typewhisper.com",
       "offers": {
         "@type": "Offer",
