Expand Windows docs to match README, activate iOS in docs hub
- Add cloud transcription (Groq/OpenAI models), dictionary, snippets,
  live partial results, dashboard, silence detection, audio normalization,
  media pause, sound feedback, non-blocking pipeline to Windows features
- Fix translation docs: add Marian ONNX (20 languages) alongside Canary
- Expand installation: welcome wizard, disk space, autostart, auto-update
- Add error responses and cloud models to API docs
- Add URL-only match priority and process name lookup to profiles
- Activate iOS beta link in docs hub, add iOS to meta tags

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="theme-color" content="#2196F3" />
     <title>TypeWhisper - Stop Typing. Start Speaking. 100% Private.</title>
-    <meta name="description" content="Free local speech-to-text for macOS and Windows. On-device AI, no cloud, no API keys, no subscriptions." />
+    <meta name="description" content="Free local speech-to-text for macOS, Windows, and iOS. On-device AI, no cloud, no API keys, no subscriptions." />
     <link rel="canonical" href="https://www.typewhisper.com/" />
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.typewhisper.com/" />
     <meta property="og:title" content="TypeWhisper - Stop Typing. Start Speaking. 100% Private." />
-    <meta property="og:description" content="Free local speech-to-text for macOS and Windows. On-device AI, no cloud, no API keys, no subscriptions." />
+    <meta property="og:description" content="Free local speech-to-text for macOS, Windows, and iOS. On-device AI, no cloud, no API keys, no subscriptions." />
     <meta property="og:image" content="https://www.typewhisper.com/og-image.png" />
     <meta property="og:site_name" content="TypeWhisper" />
     <meta property="og:locale" content="en_US" />
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Type_Whisper" />
     <meta name="twitter:title" content="TypeWhisper - Stop Typing. Start Speaking. 100% Private." />
-    <meta name="twitter:description" content="Free local speech-to-text for macOS and Windows. On-device AI, no cloud, no API keys, no subscriptions." />
+    <meta name="twitter:description" content="Free local speech-to-text for macOS, Windows, and iOS. On-device AI, no cloud, no API keys, no subscriptions." />
     <meta name="twitter:image" content="https://www.typewhisper.com/og-image.png" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -36,8 +36,8 @@
       "@type": "SoftwareApplication",
       "name": "TypeWhisper",
       "applicationCategory": "UtilitiesApplication",
-      "operatingSystem": "macOS, Windows",
-      "description": "Free local speech-to-text for macOS and Windows. On-device AI, no cloud, no API keys, no subscriptions.",
+      "operatingSystem": "macOS, Windows, iOS",
+      "description": "Free local speech-to-text for macOS, Windows, and iOS. On-device AI, no cloud, no API keys, no subscriptions.",
       "url": "https://www.typewhisper.com",
       "offers": {
         "@type": "Offer",
